Add winning message and center restart button

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
     align-items: center;
     grid-template-columns: repeat(3, auto);
 }
-/*alaa*/
+
 .cell {
     width: var(--cell-size);
     height: var(--cell-size);
@@ -110,4 +110,37 @@ body {
     width: calc(var(--mark-size) * .7);
     height: calc(var(--mark-size) * .7);
     background-color: #ffffff;
+}
+
+.winning-message {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .9);
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-size: 5rem;
+    flex-direction: column;
+}
+
+.winning-message button {
+    font-size: 3rem;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    padding: .25em .5em;
+    cursor: pointer;
+}
+
+.winning-message button:hover {
+    background-color: #000000;
+    color: #ffffff;
+    border-color: #ffffff;
+}
+
+.winning-message.show {
+    display: flex;
 }
