--- a/css/style2.css
+++ b/css/style2.css
@@ -119,7 +119,7 @@ body, html {
 	background-attachment: fixed;
 }
 .background2 {
-	background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("../img/FullPicture.png");
+	background-image:linear-gradient(rgba(0,0,0,0.4),rgb(0,0,0,0.4)), url("../img/FullPicture.png");
 	color:#111111;
 	position: relative;
 	background-position: center;
@@ -129,7 +129,7 @@ body, html {
 	align-content: bottom;
 }
 .background3 {
-	background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("../img/CBG.png");
+	background-image:url("../img/CBG.png");
 	color:#111111;
 	position: relative;
 	background-position: center;
